Fixed palcement and layout bugs Added id's

--- a/style.css
+++ b/style.css
@@ -1,8 +1,34 @@
 *, *::before, *::after {
-    /* outline: 1px red solid; */
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: normal;
+}
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 2.5rem;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    color: white;
+    text-align: center;
+    background-color: #EA738DFF;
+}
+
+
+h1 {
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    text-align: center;
+    font-weight: bolder;
+    text-transform: capitalize;
 }
 
 body {
@@ -10,54 +36,39 @@ body {
     padding: 0;
     background: linear-gradient(to right, #CBCE91FF, #EA738DFF);
 }
-
-h1 {
-    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
-    text-align: center;
-    font-weight: bolder;
-    text-transform: capitalize;
-    margin-bottom: 30px;
-}
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: red;
-  color: white;
-  text-align: center;
-  background-color: #EA738DFF;
-  padding: 10px;
-}
 .calculator {
-    
-    margin: 0 42px  ;
-    padding: 0;
-    
-    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    outline: 2px red solid;
+    margin: 0;
+    padding: 10px 0;    
+   
 }
 
 .calculator-grid {
     display: grid;
     justify-content: center;
     align-content: center;
-    gap: 2px;
-    min-height: 200px;
+    gap: 3px;
+    /* max-height: 100%; */
+    min-width: 42vh;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: minmax(120px, auto) repeat(6, 1fr);   
+    grid-template-rows: minmax(50px, auto) repeat(6, 50px);   
     margin: 0;
 }
 
 .calculator-grid > button {
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: 1px solid #FFFFFF;
     outline: none;
     background-color: rgba(255, 255, 255, 0.75);
     padding: 0;
-    min-height: 75px;
-
+    min-height: 50px;
+    margin: 0;
+    /* border-radius: 6rem; */
 }
 
 .calculator-grid > button:hover {
@@ -76,23 +87,26 @@ h1 {
     grid-column: 1 / -1;
     background-color: rgba(0, 0, 0, 0.75);
     display: flex;
-    align-items: flex-end;
-    justify-content: space-around;
     flex-direction: column;
-    padding: 10px;
+    align-items: flex-end;
+    justify-content: center;
+    
+    padding: 1.5rem;
     word-wrap: break-word;
     word-break: break-all;
+    height: 8rem;
+    /* border-radius: 6em; */
 }
 
 
 .output .previous-operand {
     color: rgba(255, 255, 255, 0.75);
-    font-size: 1.5rem;
+    font-size: 3rem;
 }
 
 .output .current-operand {
     color: white;
-    font-size: 2.5rem;
+    font-size: 4rem;
 }
 
 .tooltip {
